--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -1,3 +1,7 @@
+.textSelectModeC {
+  overflow-y: scroll;
+  overflow-scrolling: touch;
+}
 .textSelectModeC .text {
   color: rgba(0,0,0,0.7); 
   padding-top: 65px;  
