feat(verticalscroll): switch to ionic scroll from native scroll (to remove bounce)

--- a/src/app/modec/textselect.part.html
+++ b/src/app/modec/textselect.part.html
@@ -1,6 +1,6 @@
 <ion-view>
-  <ion-content class="textSelectModeC" scroll="false" overflow-scroll="true" ng-controller="TextSelectModeCCtrl">
-    <div style="width:{{windowWidth}}px; height:5000px">
+  <ion-content class="textSelectModeC" scroll="true" has-bouncing="false" ng-controller="TextSelectModeCCtrl">
+    <div style="width:{{windowWidth}}px">
       <!-- image slides -->
       <gw-mob-slideswipe
         getnextitem="getNextImage(currentImage)"
