--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -44,12 +44,13 @@
   color: #2980b9;
   opacity: 1;
 }
-.textSelectModeC .sendBarContainer {
+.textSelectModeC .bottomBar {
+  position: absolute;
+  bottom: 0px;
   width: 100%;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 30px;
+  z-index: 3000;
 }
+/*
 .textSelectModeC .likeDislikeIconsContainer {
   margin-top: 8px;
   width: 100%;
@@ -71,4 +72,4 @@
   padding-left: 10px;
   padding-right: 10px;
 }
-
+*/
