--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -3,7 +3,7 @@
 .textSelectModeC .text {
   color: rgba(0,0,0,0.7); 
   padding-top: 40px;  
-  padding-bottom: 40px;
+  padding-bottom: 100px;
   padding-left: 50px;
   padding-right: 50px;
   text-align: center;
@@ -41,14 +41,39 @@
   color: black;
 }
 .textSelectModeC .dotIndicator .currentDot {
-  color: #2980b9;
+  color: #5abbe5;
   opacity: 1;
 }
 .textSelectModeC .bottomBar {
   position: absolute;
+  display: flex;
   bottom: 0px;
   width: 100%;
   z-index: 3000;
+  padding-bottom: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.textSelectModeC .bottomBar .sendBar {
+  margin-left: 10px;
+  margin-right: 10px;
+  flex: 1;
+}
+.textSelectModeC .bottomBar .sendBar .sendButton {
+  border-radius: 3px;
+  background-color: #5abbe5;
+  height: 50px;
+}
+.textSelectModeC .bottomBar .likeDislikeIcon {
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  color: white;
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 3px;
+  vertical-align: center;
+  text-align: center;
 }
 /*
 .textSelectModeC .likeDislikeIconsContainer {
