--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -55,20 +55,21 @@
   padding-right: 15px;
 }
 .textSelectModeC .bottomBar .sendBar {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 50px;
+  margin-right: 50px;
   flex: 1;
 }
 .textSelectModeC .bottomBar .sendBar .sendButton {
   border-radius: 3px;
   background-color: #5abbe5;
-  height: 50px;
+  height: 40px;
+  line-height: 40px;
 }
 .textSelectModeC .bottomBar .likeDislikeIcon {
   padding: 10px;
-  width: 50px;
-  height: 50px;
-  font-size: 30px;
+  width: 40px;
+  height: 40px;
+  font-size: 23px;
   color: white;
   background-color: rgba(0,0,0,0.1);
   border-radius: 3px;
