feat(sendlikedislike): add gradient to fade text

--- a/src/app/modec/textselect.part.html
+++ b/src/app/modec/textselect.part.html
@@ -5,8 +5,8 @@
     <gw-mob-sendbar 
       emailaddress="emailAddress" 
       mobilenumber="mobileNumber" 
-      text="'text'"
-      imageurl="'image'">
+      text="currentText.Content"
+      imageurl="'image url'">
     </gw-mob-sendbar>
     <div class="likeDislikeIcon ion-thumbsup" ng-click="likeIconClick(item)"></div> 
   </div>
