--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -50,9 +50,12 @@
   bottom: 0px;
   width: 100%;
   z-index: 3000;
+  padding-top: 50px;
   padding-bottom: 15px;
   padding-left: 15px;
   padding-right: 15px;
+  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 100%);
+  pointer-events: none;
 }
 .textSelectModeC .bottomBar .sendBar {
   margin-left: 50px;
@@ -64,6 +67,7 @@
   background-color: #5abbe5;
   height: 40px;
   line-height: 40px;
+  pointer-events: all;
 }
 .textSelectModeC .bottomBar .likeDislikeIcon {
   padding: 10px;
@@ -71,10 +75,11 @@
   height: 40px;
   font-size: 23px;
   color: white;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.2);
   border-radius: 3px;
   vertical-align: center;
   text-align: center;
+  pointer-events: all;
 }
 /*
 .textSelectModeC .likeDislikeIconsContainer {
