--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -57,16 +57,18 @@
   background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 100%);
   pointer-events: none;
 }
-.textSelectModeC .bottomBar .sendBar {
+.textSelectModeC .bottomBar .sendButton {
+  flex: 1;
   margin-left: 50px;
   margin-right: 50px;
-  flex: 1;
-}
-.textSelectModeC .bottomBar .sendBar .sendButton {
   border-radius: 3px;
   background-color: #5abbe5;
   height: 40px;
   line-height: 40px;
+  color: white;
+  font-size: 1.25em;
+  text-align: center;
+  vertical-align: center;
   pointer-events: all;
 }
 .textSelectModeC .bottomBar .likeDislikeIcon {
