--- a/src/app/modec/textselect.part.html
+++ b/src/app/modec/textselect.part.html
@@ -2,12 +2,7 @@
   <!-- bottom bar -->
   <div class="bottomBar">
     <div class="likeDislikeIcon icon ion-thumbsdown" ng-click="dislikeIconClick()"></div> 
-    <gw-mob-sendbar 
-      emailaddress="emailAddress" 
-      mobilenumber="mobileNumber" 
-      text="currentText.Content"
-      imageurl="'image url'">
-    </gw-mob-sendbar>
+    <div class="sendButton" ng-click="sendButtonClick()">Send</div>
     <div class="likeDislikeIcon ion-thumbsup" ng-click="likeIconClick(item)"></div> 
   </div>
   <ion-content scroll="true" scrollbar-y="false" has-bouncing="false">
@@ -36,7 +31,7 @@
         ng-if="textList"
         getnextitem="getNextText(currentText)"
         getpreviousitem="getPreviousText(currentText)"
-        currentitem="$parent.currentText"
+        currentitem="$parent.$parent.currentText"
         swipeLeft="$parent.swipeLeft"
         swipeRight="$parent.swipeRight"
         swipedleft="textSwiped()"
