--- a/src/app/modec/textselect.part.html
+++ b/src/app/modec/textselect.part.html
@@ -1,6 +1,6 @@
 <ion-view class="textSelectModeC" ng-controller="TextSelectModeCCtrl">
   <!-- bottom bar -->
-  <div class="bottomBar">
+  <div class="bottomBar" ng-if="!endOfTextVisible()">
     <div class="likeDislikeIcon icon ion-thumbsdown" ng-click="dislikeIconClick()"></div> 
     <div class="sendButton" ng-click="sendButtonClick()">Send</div>
     <div class="likeDislikeIcon ion-thumbsup" ng-click="likeIconClick(item)"></div> 
@@ -32,7 +32,7 @@
         getnextitem="getNextText(currentText)"
         getpreviousitem="getPreviousText(currentText)"
         currentitem="$parent.$parent.currentText"
-        swipeLeft="$parent.swipeLeft"
+        swipeLeft="$parent.$parent.swipeLeft"
         swipeRight="$parent.swipeRight"
         swipedleft="textSwiped()"
         swipedright="textSwiped()"
