feat(movesettings): remove settings button

--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -1,8 +1,4 @@
 <ion-view>
-  <ion-content class="home" style="background-image: url('app/home/home.jpg')" scroll="false" ng-controller="HomeCtrl">
-    <div class="settingsIcon icon ion-gear-a" ng-click="settingsClick()"></div>
-    <div class="arrow" ng-click="launch()">
-      <img src="app/home/arrow.png"/>
-    </div>
+  <ion-content class="home" style="background-image: url('app/home/home.jpg')" scroll="false" ng-controller="HomeCtrl" ng-click="launch()">
   </ion-content>
 </ion-view>
