--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -1,4 +1,4 @@
 <ion-view>
-  <ion-content class="home" style="background-image: url('app/home/home.jpg')" scroll="false" ng-controller="HomeCtrl" ng-click="launch()">
+  <ion-content class="home" style="background-image: url('app/home/home.jpg')" scroll="false" ng-controller="HomeCtrl">
   </ion-content>
 </ion-view>
