--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -46,14 +46,14 @@
 }
 .textSelectModeC .settingsButton {
   position: absolute;
-  top: 20px;
+  top: 30px;
   left: 20px;
   z-index: 200;
-  padding: 10px;
   width: 40px;
   height: 40px;
-  font-size: 23px;
-  color: white;
+  line-height: 40px;
+  font-size: 25px;
+  color: rgba(255,255,255,0.7);
   background-color: rgba(0,0,0,0.1);
   border-radius: 3px;
   vertical-align: center;
@@ -87,9 +87,9 @@
   pointer-events: all;
 }
 .textSelectModeC .bottomBar .likeDislikeButton {
-  padding: 10px;
   width: 40px;
   height: 40px;
+  line-height: 40px;
   font-size: 23px;
   color: white;
   background-color: rgba(0,0,0,0.1);
