--- a/src/app/settings/settings.css
+++ b/src/app/settings/settings.css
@@ -1,13 +1,13 @@
 .settings {
   width: 100%;
   height: 100%;
-  background-color: #56abdf;
-  border-radius: 10px;
+  background-color: white;
 }
 .settings .closeIcon {
   float: right;
-  color: white;
+  color: black;
   margin: 20px;
+  margin-top: 40px;
   font-size: 1.7em;
 }
 .settings .list {
@@ -21,12 +21,11 @@
   margin-top: 7px;
   padding: 0px;
   background-color: transparent;
-  color: white;
+  color: black;
 }
 .settings .item-select select {
   background-color: transparent;
-  color: white;
-  font-weight: bold;
+  color: black;
   padding-top: 10px;
   padding-bottom: 0px;
 }
@@ -34,25 +33,24 @@
   height: 50px;
 }
 .settings .track {
-  border-color: rgba(255, 255, 255, 0.0) !important;
-  background-color: rgba(255, 255, 255, 0.1) !important;
+  border-color: rgba(0, 0, 0, 0.0) !important;
+  background-color: rgba(0, 0, 0, 0.1) !important;
 }
 .settings .toggle {
   right: 0px;
 }
 .settings .toggle input:checked + .track {
-  background-color: rgba(255, 255, 255, 0.3) !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
 }
 .settings .input-label {
   font-size: 1em;
-  color: white;
+  color: black;
   opacity: 0.7;
 }
 .settings input {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: white;
+  background-color: rgba(0, 0, 0, 0.05);
+  color: black;
   font-size: 1em;
-  font-weight: bold;
   padding-left: 10px;
 }
 
