--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -1,6 +1,6 @@
-.textSelectModeC {
+.textSelect {
 }
-.textSelectModeC .text {
+.textSelect .text {
   color: rgba(0,0,0,0.7); 
   padding-top: 40px;  
   padding-bottom: 100px;
@@ -9,7 +9,7 @@
   text-align: center;
   font-size: 1.05em;
 } 
-.textSelectModeC .image {
+.textSelect .image {
   width: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -19,32 +19,32 @@
   background-position: center center;
   background-attachment: fixed fixed; 
 }
-.textSelectModeC .dotIndicatorContainer {
+.textSelect .dotIndicatorContainer {
   position: absolute;
   width: 100%;
   z-index: 1000;
   pointer-events: none;
 }
-.textSelectModeC .dotIndicatorCenter {
+.textSelect .dotIndicatorCenter {
   float: right;
   right: 50%;
   position: relative;
 }
-.textSelectModeC .dotIndicator {
+.textSelect .dotIndicator {
   float: right;
   right: -50%;
   position: relative;
 }
-.textSelectModeC .dotIndicator .dot {
+.textSelect .dotIndicator .dot {
   font-size: 20px;
   opacity: 0.15;
   color: black;
 }
-.textSelectModeC .dotIndicator .currentDot {
+.textSelect .dotIndicator .currentDot {
   color: #5abbe5;
   opacity: 1;
 }
-.textSelectModeC .settingsButton {
+.textSelect .settingsButton {
   position: absolute;
   top: 30px;
   left: 20px;
@@ -59,7 +59,7 @@
   vertical-align: center;
   text-align: center;
 }
-.textSelectModeC .bottomBar {
+.textSelect .bottomBar {
   position: absolute;
   display: flex;
   bottom: 0px;
@@ -72,7 +72,7 @@
   background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 100%);
   pointer-events: none;
 }
-.textSelectModeC .bottomBar .sendButton {
+.textSelect .bottomBar .sendButton {
   flex: 1;
   margin-left: 50px;
   margin-right: 50px;
@@ -86,7 +86,7 @@
   vertical-align: center;
   pointer-events: all;
 }
-.textSelectModeC .bottomBar .likeDislikeButton {
+.textSelect .bottomBar .likeDislikeButton {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -98,26 +98,3 @@
   text-align: center;
   pointer-events: all;
 }
-/*
-.textSelectModeC .likeDislikeIconsContainer {
-  margin-top: 8px;
-  width: 100%;
-  text-align: center;
-}
-.textSelectModeC .likeDislikeIcons {
-  display: inline-block;
-  color: #2980b9;
-  font-size: 3.0em;
-}
-.textSelectModeC .likeDislikeIcons:after {
-  content: " ";
-  display: block; 
-  height: 0; 
-  clear: both;
-}
-.textSelectModeC .likeDislikeIcons .icon {
-  float: left;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-*/
