feat(removemodeamodeb): rename textselect controller

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -1,4 +1,4 @@
-<ion-view class="textSelectModeC" ng-controller="TextSelectModeCCtrl">
+<ion-view class="textSelect" ng-controller="TextSelectCtrl">
   <!-- bottom bar -->
   <div class="bottomBar" ng-if="!endOfTextVisible()">
     <div class="likeDislikeButton icon ion-thumbsdown" ng-click="dislikeButtonClick()"></div> 
