--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -59,6 +59,14 @@
   vertical-align: center;
   text-align: center;
 }
+.textSelect .debugButton {
+  position: absolute;
+  top: 30px;
+  right: 15px;
+  z-index: 200;
+  width: 40px;
+  height: 40px;
+}
 .textSelect .bottomBar {
   position: absolute;
   display: flex;
