--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -7,7 +7,9 @@
   </div>
   <ion-content scroll="true" scrollbar-y="false" has-bouncing="false" style="width:{{windowWidth}}px">
     <!-- settings button -->
-    <div class="settingsButton icon ion-gear-a" ng-click="settingsClick()"></div>
+    <div class="settingsButton icon ion-gear-a" ng-click="settingsButtonClick()"></div>
+    <!-- debug button -->
+    <div class="debugButton" ng-click="debugButtonClick()"></div>
     <!-- image slides -->
     <gw-mob-slideswipe
       getnextitem="getNextImage(currentImage)"
