--- a/src/app/debug/debug.css
+++ b/src/app/debug/debug.css
@@ -1,13 +1,10 @@
-.debugView {
-  margin-top: 5px;
-}
-.debugView .textListItem {
+.debug .textListItem {
   color: #333333; 
 }
-.debugView .textListItem p {
+.debug .textListItem p {
   text-align: center;
 }
-.debugView .imageListItem {
+.debug .imageListItem .image {
   width: 100%;
   height: 300px;
   background-repeat: no-repeat;
@@ -15,9 +12,8 @@
   background-position: center center;
   background-attachment: fixed fixed; 
 }
-.debugView .imageListItem p {
+.debug .imageListItem p {
   text-align: center; 
-  color: white;
+  color: black;
   font-size: 16px;
-  padding-top: 20px;
 }
