--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -8,12 +8,17 @@
   font-family: 'notoserif-italic';
   font-size: 1.2em;
   line-height: 1.4em;
-  text-align: left;
+  text-align: center;
   color: #001f46; 
   opacity: 0.7;
 } 
+.textSelect .imageContainer {
+  width: 100%;
+  position: relative;
+}
 .textSelect .image {
   width: 100%;
+  height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -21,6 +26,22 @@
   background-repeat: no-repeat; 
   background-position: center center;
   background-attachment: fixed fixed; 
+}
+.textSelect .moreImagesText {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-family: 'notoserif-italic';
+  font-size: 1.5em;
+  line-height: 1.2em;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
 .textSelect .dotIndicatorContainer {
   position: absolute;
