feat(sendstyling): override default styles

--- a/src/app/send/send.css
+++ b/src/app/send/send.css
@@ -1,4 +1,12 @@
 .send .sendButton {
   color: #339ee6;
 }
+.send .sendLabel {
+  font-family: 'notoserif-italic';
+}
+.send .cancelButton {
+  color: white;
+  background-color: #339ee6;
+  font-family: 'notoserif-italic';
+}
 
