--- a/src/app/settings/settings.css
+++ b/src/app/settings/settings.css
@@ -2,18 +2,63 @@
   width: 100%;
   height: 100%;
   background-color: white;
+  font-family: 'notoserif-italic';
 }
 .settings .closeIcon {
-  float: right;
-  color: black;
+  position: absolute;
+  top: 0px;
+  right: 15px;
+  color: #339ee6;
   margin: 20px;
   margin-top: 40px;
   font-size: 1.7em;
 }
+.settings {
+  color: #aaaaaa;
+}
+.settings .tabs {
+  top: 80px;
+  height: 80px;
+  background-color: transparent;
+  border: none !important;
+  border-color: transparent;
+  border-width: 0px;
+}
+.settings .tab-item {
+  border: none !important;
+}
+.settings .tab-item-active {
+  border: none !important;
+}
+.settings .tabs .icon {
+  font-size: 1.7em;
+  color: #aaaaaa;
+}
+.settings .tabs .tab-item-active .icon {
+  font-size: 1.7em;
+  color: #339ee6;
+}
+.settings .tab-title {
+  font-size: 0.8em;
+  color: #aaaaaa;
+}
+.settings .tab-item-active .tab-title {
+  color: #339ee6;
+}
+.settings .tab-content {
+  top: 160px;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 15px;
+  border-style: solid;
+  border-top-width: 2px;
+  border-top-color: #339ee6; 
+}
+.settings .settingArea {
+}
 .settings .list {
   clear: both;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 .settings .item {
   border: none;
@@ -21,7 +66,7 @@
   margin-top: 7px;
   padding: 0px;
   background-color: transparent;
-  color: black;
+  color: inherit;
 }
 .settings .item-select select {
   background-color: transparent;
@@ -44,8 +89,6 @@
 }
 .settings .input-label {
   font-size: 1em;
-  color: black;
-  opacity: 0.7;
 }
 .settings input {
   background-color: rgba(0, 0, 0, 0.05);
@@ -53,4 +96,3 @@
   font-size: 1em;
   padding-left: 10px;
 }
-
