feat(pickcontact): pass labels to contact directive

--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -2,6 +2,8 @@
   <ion-tabs class="tabs-light">
     <ion-tab title="Mum" icon-on="ion-android-contact" icon-off="ion-android-contact">
       <gw-mob-contact
+        emailaddresslabel="'Mum\'s Email Address'"
+        mobilenumberlabel="'Mum\'s Mobile Number'"
         emailaddress="settings.emailAddress"
         mobilenumber="settings.mobileNumber">
       </gw-mob-contact>
