--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -133,3 +133,27 @@
   text-align: center;
   pointer-events: all;
 }
+.textSelect .contactPopup {
+  background-color: rgba(0,0,0,0.6);
+}
+.textSelect .contactPopup .content {
+  margin-top: 50px;
+  border-radius: 8px;
+}
+.textSelect .contactPopup .contactButton {
+  margin-top: 5px;
+  border-radius: 3px;
+  background-color: #339ee6;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  color: white;
+  font-size: 1.25em;
+  text-align: center;
+  vertical-align: center;
+  pointer-events: all;
+  font-family: 'notoserif-italic';
+}
+.textSelect .contact {
+  padding: 40px;
+}
