--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -133,25 +133,28 @@
   text-align: center;
   pointer-events: all;
 }
-.textSelect .contactPopup {
-  background-color: rgba(0,0,0,0.6);
+.textSelect .send {
+  margin-top: 150px;
 }
-.textSelect .contactPopup .content {
+.textSelect .contact {
   margin-top: 50px;
+  background-color: white;
   border-radius: 8px;
 }
-.textSelect .contactPopup .contactButton {
-  margin-top: 5px;
+.textSelect .popupButton {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
   border-radius: 3px;
   background-color: #339ee6;
-  width: 100%;
+  width: 150px;
   height: 40px;
   line-height: 40px;
-  color: white;
   font-size: 1.25em;
-  text-align: center;
   vertical-align: center;
-  pointer-events: all;
+  color: white;
+  text-align: center;
   font-family: 'notoserif-italic';
 }
 .textSelect .contact {
