feat(pickcontact): fix done button to bottom of device (fixes keyboard problem)

--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -48,7 +48,7 @@
       <p>Notifications</p>
     </ion-tab>
   </ion-tabs>
-  <div class="doneButtonContainer">
+  <div class="doneButtonContainer" style="top:{{deviceHeight-60}}px">
     <div class="doneButton" ng-click="close()">Done</div>
   </div>
 </div>
