feat(genderseelct): add misc tab and clear settings button

--- a/src/app/debug/debug.part.html
+++ b/src/app/debug/debug.part.html
@@ -30,5 +30,11 @@
         <br><br>
       </ion-content>
     </ion-tab>
+    <ion-tab title="Misc" icon-on="ion-wrench" icon-off="ion-wrench">
+      <ion-content scroll="true" scrollbar-y="true" has-bouncing="false">
+        <br><br>
+        <button class="button" ng-click="clearSettingsClick()">Clear Settings</button>
+      </ion-content>
+    </ion-tab> 
   </ion-tabs>
 </ion-view>
