--- a/src/app/genderselect/genderselect.css
+++ b/src/app/genderselect/genderselect.css
@@ -1,16 +1,31 @@
-.home {
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  background-size: cover;
-  background-repeat: no-repeat; 
-  background-position: center center;
-  background-attachment: fixed fixed; 
+.genderSelect {
+  text-align: center;
+  margin-top: 100px;
 }
-.home .settingsIcon {
-  position: absolute;
+.genderSelect .title {
+  font-size: 1.7em;
+  margin-bottom: 30px;
+  font-family: 'notoserif-italic';
+  color: #339ee6;
+}
+.genderSelect .genderBox {
+  display: inline-block;
+  margin: 3px;
+}
+.genderSelect .genderButton {
+  font-size: 2.5em;
+  width: 90px;
+  height: 90px;
+  line-height: 90px;
+  vertical-align: center;
+  border-radius: 5px;
   color: white;
-  bottom: 20px;
-  left: 20px;
-  font-size: 3em;
+  background-color: #339ee6;
+}
+.genderSelect .genderLabel {
+  margin-top: 15px;
+  font-size: 1.3em;
+  color: black;
+  font-family: 'notoserif-italic';
+  color: #339ee6;
 }
