feat(weightedtexts): change end of image/text text

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -43,7 +43,7 @@
       <gw-mob-slide>
         <div class="imageContainer" style="height:{{slideImageHeight}}px">
           <!-- more images text -->
-          <div class="moreImagesText" ng-show="item.indexOf('eof')!==-1">Come tomorrow<br>for more kittens!</div>
+          <div class="moreImagesText" ng-show="item.indexOf('eof')!==-1">See you tomorrow<br>for more kittens!</div>
           <!-- image -->
           <div class="image" style="background-image:url('{{item}}')"></div>
         </div>
