--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -12,6 +12,11 @@
   color: #001f46; 
   opacity: 0.7;
 } 
+.textSelect .author {
+  margin-top: 10px;
+  font-size: 0.8em;
+  opacity: 0.7;
+} 
 .textSelect .imageContainer {
   width: 100%;
   position: relative;
