--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -45,7 +45,10 @@
       </div>
     </ion-tab>
     <ion-tab title="Notifications" icon-on="ion-clock" icon-off="ion-clock">
-      <p>Notifications</p>
+      <gw-mob-timepicker hour="notify.hour" minute="notify.minute">
+      </gw-mob-timepicker>
+      <p>{{notify.hour}}</p>
+      <p>{{notify.minute}}</p>
     </ion-tab>
   </ion-tabs>
   <div class="doneButtonContainer" style="top:{{deviceHeight-60}}px">
