--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -44,10 +44,16 @@
         </div>
       </div>
     </ion-tab>
-    <ion-tab title="Notifications" icon-on="ion-clock" icon-off="ion-clock">
-      <label class="radioGroupLabel">Time of day</label>
-      <gw-mob-timepicker hour="notify.hour" minute="notify.minute">
-      </gw-mob-timepicker>
+    <ion-tab title="Reminder" icon-on="ion-clock" icon-off="ion-clock">
+      <div class="radioGroup">
+        <label class="radioGroupLabel">Daily reminder</label>
+        <ion-toggle ng-model="settings.notification" toggle-class="toggle-calm"></ion-toggle>
+      </div>
+      <div class="radioGroup" ng-show="settings.notification">
+        <label class="radioGroupLabel">Time of day</label>
+        <gw-mob-timepicker hour="settings.notificationHour" minute="settings.notificationMinute">
+        </gw-mob-timepicker>
+      </div>
     </ion-tab>
   </ion-tabs>
   <div class="doneButtonContainer" style="top:{{deviceHeight-60}}px">
