fix(settings): change timepicker minute step to 15

--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -57,7 +57,7 @@
         <div style="float:left; margin-top:40px">
           <label class="radioGroupLabel">Time of day</label>
         </div>
-        <gw-mob-timepicker hour="settings.notificationHour" minute="settings.notificationMinute">
+        <gw-mob-timepicker hour="settings.notificationHour" minute="settings.notificationMinute" minutestep="15">
         </gw-mob-timepicker>
       </div>
     </ion-tab>
