fix(emailattachment): fix currentImage scope problem

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -36,7 +36,7 @@
     <gw-mob-slideswipe
       getnextitem="getNextImage(currentImage)"
       getpreviousitem="getPreviousImage(currentImage)"
-      currentitem="currentImage"
+      currentitem="$parent.currentImage"
       width="deviceWidth"
       height="slideImageHeight">
       <!-- slide -->
