feat(smspopups): add send success/fail popups

--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -171,7 +171,7 @@
 .textSelect .contact {
   padding: 40px;
 }
-.textSelect .smsImagePopup {
+.textSelect .textPopup {
   padding-top: 80px;
   font-size: 1.25em;
   font-family: 'notoserif-italic';
