--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -9,11 +9,19 @@
     <div class="popupButton pad" ng-click="sendCancelButtonClick()">Cancel</div>
   </gw-mob-popup>
   <!-- sms image popup -->
-  <gw-mob-popup class="smsImagePopup" ng-if="smsImagePopupVisible">
+  <gw-mob-popup class="textPopup" ng-if="smsImagePopupVisible">
     <div>Cannot send image</div>
     <div class="popupButton pad" ng-click="sendSMS()">Send Text Only</div>
     <div class="popupButton" ng-click="sendEmail()">Send Email</div>
     <div class="popupButton" ng-click="sendCancelButtonClick()">Cancel</div>
+  </gw-mob-popup>
+  <!-- sent popup -->
+  <gw-mob-popup class="textPopup" ng-if="sentPopupVisible">
+    <div>Message Sent</div>
+  </gw-mob-popup>
+  <!-- error popup -->
+  <gw-mob-popup class="textPopup" ng-if="errorPopupVisible">
+    <div>Message Send Error</div>
   </gw-mob-popup>
   <!-- contact picker popup -->
   <gw-mob-popup class="contactPopup" ng-if="contactPopupVisible">
